refining cards. fixing lines of text visible

--- a/content-src/components/DiscoveryStreamComponents/CardGrid/_CardGrid.scss
+++ b/content-src/components/DiscoveryStreamComponents/CardGrid/_CardGrid.scss
@@ -1,5 +1,11 @@
 .ds-card-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-column-gap: 24px;
+  grid-gap: 24px;
+
+  .ds-card {
+    background: $white;
+    box-shadow: 0px 1px 4px rgba(12, 12, 13, 0.1);
+    border-radius: 4px;
+  }
 }
