--- a/content-src/components/DiscoveryStreamComponents/DSCard/_DSCard.scss
+++ b/content-src/components/DiscoveryStreamComponents/DSCard/_DSCard.scss
@@ -1,3 +1,9 @@
+// Type sizes
+$header-font-size: 17;
+$header-line-height: 24;
+$excerpt-font-size: 13;
+$excerpt-line-height: 20;
+
 .ds-card {
   border: 5px solid transparent;
 
@@ -11,7 +17,6 @@
     width: 100%;
     border: 0.5px solid $black-10;
     border-radius: 4px;
-    margin: 0 0 12px;
   }
 
   .img {
@@ -23,11 +28,23 @@
 
   .meta {
     padding: 16px;
+
+    .title {
+      // 2x line height (2 lines visible)
+      max-height: 2em * $header-line-height / $header-font-size;
+      overflow: hidden;
+    }
+
+    .excerpt {
+      // 4x line height (4 lines visible)
+      max-height: 4em * $excerpt-line-height / $excerpt-font-size;
+      overflow: hidden;
+    }
   }
 
   header {
-    line-height: 24px;
-    font-size: 17px;
+    line-height: $header-line-height * 1px;
+    font-size: $header-font-size * 1px;
     color: $grey-90;
 
     &:hover {
@@ -40,8 +57,8 @@
   }
 
   p {
-    font-size: 13px;
-    line-height: 20px;
+    font-size: $excerpt-font-size * 1px;
+    line-height: $excerpt-line-height * 1px;
     color: $grey-50;
     margin: 8px 0;
   }
